feat: slidebar and rtl module for view client

--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
-<p>home works!</p>
 <div><i class="fa-solid fa-house"></i></div>
 <app-sign-in></app-sign-in>
+<app-slides></app-slides>
+<app-see-flights></app-see-flights>
