--- a/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.html
+++ b/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.html
@@ -234,12 +234,12 @@
                 class="card-img-top"
                 width="100%"
                 height="225"
-                src="assets/images/1.webp"
+                src="assets/images/nica.webp"
                 alt="1.jpg"
               />
 
               <div class="card-body">
-                <p class="card-text">San Jose-Panama</p>
+                <p class="card-text">San Jose-Nicagua</p>
                 <p class="card-text">$322</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -269,12 +269,12 @@
                 class="card-img-top"
                 width="100%"
                 height="225"
-                src="assets/images/1.webp"
+                src="assets/images/guate.webp"
                 alt="1.jpg"
               />
 
               <div class="card-body">
-                <p class="card-text">San Jose-Panama</p>
+                <p class="card-text">San Jose-Ciudad de Guatemala</p>
                 <p class="card-text">$322</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -304,12 +304,12 @@
                 class="card-img-top"
                 width="100%"
                 height="225"
-                src="assets/images/1.webp"
+                src="assets/images/BA.webp"
                 alt="1.jpg"
               />
 
               <div class="card-body">
-                <p class="card-text">San Jose-Panama</p>
+                <p class="card-text">San Jose-Buenos Aires</p>
                 <p class="card-text">$322</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -339,12 +339,12 @@
                 class="card-img-top"
                 width="100%"
                 height="225"
-                src="assets/images/1.webp"
+                src="assets/images/Mendoza.webp"
                 alt="1.jpg"
               />
 
               <div class="card-body">
-                <p class="card-text">San Jose-Panama</p>
+                <p class="card-text">San Jose-Mendoza</p>
                 <p class="card-text">$322</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -374,12 +374,12 @@
                 class="card-img-top"
                 width="100%"
                 height="225"
-                src="assets/images/1.webp"
+                src="assets/images/chile.webp"
                 alt="1.jpg"
               />
 
               <div class="card-body">
-                <p class="card-text">San Jose-Panama</p>
+                <p class="card-text">San Jose-Ciudad de Chile</p>
                 <p class="card-text">$322</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -409,12 +409,12 @@
                 class="card-img-top"
                 width="100%"
                 height="225"
-                src="assets/images/1.webp"
+                src="assets/images/patagonia.webp"
                 alt="1.jpg"
               />
 
               <div class="card-body">
-                <p class="card-text">San Jose-Panama</p>
+                <p class="card-text">San Jose- La Patagonia</p>
                 <p class="card-text">$322</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -444,12 +444,12 @@
                 class="card-img-top"
                 width="100%"
                 height="225"
-                src="assets/images/1.webp"
+                src="assets/images/mexico.webp"
                 alt="1.jpg"
               />
 
               <div class="card-body">
-                <p class="card-text">San Jose-Panama</p>
+                <p class="card-text">San Jose-Ciudad de Mexico</p>
                 <p class="card-text">$322</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -479,12 +479,12 @@
                 class="card-img-top"
                 width="100%"
                 height="225"
-                src="assets/images/1.webp"
+                src="assets/images/salvador.webp"
                 alt="1.jpg"
               />
 
               <div class="card-body">
-                <p class="card-text">San Jose-Panama</p>
+                <p class="card-text">San Jose-El Salvador</p>
                 <p class="card-text">$322</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
