--- a/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
+++ b/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
@@ -17,13 +17,13 @@
   </head>
   <body>
     <section>
-      <div class="container mt-5 pt-5">
-        <div class="row">
-          <div class="col-12 col-sm-7 col-md-6 m-auto">
-            <div class="card border-0 shadow">
-              <div class="card-body">
+      <div class="container-fluid mt-5 pt-5">
+        <div class="row justify-content-center">
+          <div class="col-10 col-sm-6 col-md-4">
+            <div class="card border-0 shadow p-4 compact-form">
+              <div class="card-body text-center">
                 <svg
-                  class="mx-auto my-3"
+                  class="mb-3"
                   xmlns="http://www.w3.org/2000/svg"
                   width="50"
                   height="50"
@@ -42,20 +42,22 @@
                     type="text"
                     name=""
                     id=""
-                    class="form-control my-4 py-2"
+                    class="form-control mb-2"
                     placeholder="Username"
                   />
                   <input
-                    type="text"
+                    type="password"
                     name=""
                     id=""
-                    class="form-control my-4 py-2"
+                    class="form-control mb-2"
                     placeholder="Password"
                   />
-                  <div class="text-center mt-3">
-                    <button class="btn btn-primary" type="button">Login</button>
-                    <a href="#" class="nav-link">Already have an account?</a>
-                  </div>
+                  <button class="btn btn-primary btn-block mb-2" type="button">
+                    Login
+                  </button>
+                  <a href="#" class="nav-link d-inline-block"
+                    >Already have an account?</a
+                  >
                 </form>
               </div>
             </div>
