--- a/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
+++ b/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
@@ -1,76 +1,118 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-      crossorigin="anonymous"
-    />
-
-    <title>Bootstrap Login Form</title>
-  </head>
-  <body>
-    <section>
-      <div class="container-fluid mt-5 pt-5">
-        <div class="row justify-content-center">
-          <div class="col-10 col-sm-6 col-md-4">
-            <div class="card border-0 shadow p-4 compact-form">
-              <div class="card-body text-center">
-                <svg
-                  class="mb-3"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="50"
-                  height="50"
-                  fill="currentColor"
-                  class="bi bi-person-circle"
-                  viewBox="0 0 16 16"
-                >
-                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                  <path
-                    fill-rule="evenodd"
-                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
-                  />
-                </svg>
-                <form action="">
-                  <input
-                    type="text"
-                    name=""
-                    id=""
-                    class="form-control mb-2"
-                    placeholder="Username"
-                  />
-                  <input
-                    type="password"
-                    name=""
-                    id=""
-                    class="form-control mb-2"
-                    placeholder="Password"
-                  />
-                  <button class="btn btn-primary btn-block mb-2" type="button">
-                    Login
-                  </button>
-                  <a href="#" class="nav-link d-inline-block"
-                    >Already have an account?</a
-                  >
-                </form>
+<head>
+  <title>Webleb</title>
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
+  />
+  <link rel="stylesheet" href="/css/styles.css" />
+</head>
+<body>
+  <div id="stars"></div>
+  <div id="stars2"></div>
+  <div id="stars3"></div>
+  <div class="section">
+    <div class="container">
+      <div class="row full-height justify-content-center">
+        <div class="col-12 text-center align-self-center py-5">
+          <div class="section pb-5 pt-5 pt-sm-2 text-center">
+            <h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
+            <label for="reg-log">TECAir</label>
+            <input
+              class="checkbox"
+              type="checkbox"
+              id="reg-log"
+              name="reg-log"
+            />
+            <label for="reg-log"></label>
+            <div class="card-3d-wrap mx-auto">
+              <div class="card-3d-wrapper">
+                <div class="card-front">
+                  <div class="center-wrap">
+                    <div class="section text-center">
+                      <h4 class="mb-4 pb-3">Log In</h4>
+                      <div class="form-group">
+                        <input
+                          type="email"
+                          class="form-style"
+                          placeholder="Email"
+                        />
+                        <i class="input-icon uil uil-at"></i>
+                      </div>
+                      <div class="form-group mt-2">
+                        <input
+                          type="password"
+                          class="form-style"
+                          placeholder="Password"
+                        />
+                        <i class="input-icon uil uil-lock-alt"></i>
+                      </div>
+                      <a href="https://www.web-leb.com/code" class="btn mt-4"
+                        >Login</a
+                      >
+                      <p class="mb-0 mt-4 text-center">
+                        <a href="https://www.web-leb.com/code" class="link"
+                          >Forgot your password?</a
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-back">
+                  <div class="center-wrap">
+                    <div class="section text-center">
+                      <h4 class="mb-3 pb-3">Sign Up</h4>
+                      <div class="form-group">
+                        <input
+                          type="text"
+                          class="form-style"
+                          placeholder="Full Name"
+                        />
+                        <i class="input-icon uil uil-user"></i>
+                      </div>
+                      <div class="form-group mt-2">
+                        <input
+                          type="tel"
+                          class="form-style"
+                          placeholder="Phone Number"
+                        />
+                        <i class="input-icon uil uil-phone"></i>
+                      </div>
+                      <div class="form-group mt-2">
+                        <input
+                          type="email"
+                          class="form-style"
+                          placeholder="Email"
+                        />
+                        <i class="input-icon uil uil-at"></i>
+                      </div>
+                      <div class="form-group mt-2">
+                        <input
+                          type="password"
+                          class="form-style"
+                          placeholder="Password"
+                        />
+                        <i class="input-icon uil uil-lock-alt"></i>
+                      </div>
+                      <a href="https://www.web-leb.com/code" class="btn mt-4"
+                        >Register</a
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+    </div>
+  </div>
+</body>
