create:plane-airplane

--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -4,3 +4,4 @@
 <app-see-flights></app-see-flights>
 <app-pricing></app-pricing>-->
 <app-navbar></app-navbar>
+<app-place-airplane></app-place-airplane>
