--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -2,6 +2,10 @@
 <!--<app-sign-in></app-sign-in>
 <app-slides></app-slides>
 <app-see-flights></app-see-flights>
-<app-pricing></app-pricing>-->
+<app-pricing></app-pricing>
 <app-navbar></app-navbar>
-<app-place-airplane></app-place-airplane>
+<app-place-airplane></app-place-airplane>-->
+<app-navbar></app-navbar>
+
+<app-slides></app-slides>
+<app-search-plane></app-search-plane>
