--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -3,9 +3,9 @@
 <app-slides></app-slides>
 <app-see-flights></app-see-flights>
 <app-pricing></app-pricing>
-<app-navbar></app-navbar>
-<app-place-airplane></app-place-airplane>-->
+<app-place-airplane></app-place-airplane>
 <app-navbar></app-navbar>
 
 <app-slides></app-slides>
-<app-search-plane></app-search-plane>
+<app-search-plane></app-search-plane>-->
+<app-place-airplane></app-place-airplane>
