--- a/web/TECAir_Reservations/src/app/components/place-airplane/place-airplane.component.css
+++ b/web/TECAir_Reservations/src/app/components/place-airplane/place-airplane.component.css
@@ -30,3 +30,39 @@
   background-color: rgb(0, 217, 255);
   align-items: center;
 }
+
+.center {
+  width: 100%;
+  text-align: center;
+}
+
+input[type="checkbox"] {
+  position: relative;
+  top: 3px;
+  width: 40px;
+  height: 40px;
+  -webkit-appearance: none;
+  appearance: none;
+  outline: none;
+  transition: 0.5s;
+}
+
+input[type="checkbox"]:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 3px solid #000000;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+input:checked[type="checkbox"]:before {
+  border-left: none;
+  border-top: none;
+  width: 20px;
+  border-color: rgb(230, 9, 27);
+  transform: rotate(45deg) translate(5px, -10px);
+}
