--- a/web/TECAir_Reservations/src/app/components/place-airplane/place-airplane.component.html
+++ b/web/TECAir_Reservations/src/app/components/place-airplane/place-airplane.component.html
@@ -3,103 +3,167 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mapa de Asientos</title>
+    <title>AIRPLANE 747</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f3f3f3;
+      }
+
+      .plane {
+        position: relative;
+        width: 100%; /* Cambiado a 100% para que sea responsive */
+        max-width: 225px; /* Tamaño máximo original */
+        margin: 45px auto;
+        text-align: center;
+        background-image: url("a320neo.jpg");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        padding: 50px 0;
+        border-radius: 17% / 100%;
+        background-color: #fff;
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+      }
+
+      /* izqueirda */
+      .plane::before {
+        content: "";
+        position: absolute;
+        top: 50%; /* Modificado para que esté en el centro */
+        left: -90px; /* Aumentado para que la ala sea más larga */
+        width: 90px;
+        height: 55px;
+        background-color: #fff;
+        border-radius: 60% 20% 20% 60%;
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+        transform: rotate(-3deg);
+      }
+
+      /* Pseudoelemento para la ala derecha */
+      .plane::after {
+        content: "";
+        position: absolute;
+        top: 50%; /* Modificado para que esté en el centro */
+        right: -90px; /* Aumentado para que la ala sea más larga */
+        width: 90px;
+        height: 55px;
+        background-color: #fff;
+        border-radius: 20% 90% 90% 20%;
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+        transform: rotate(5deg);
+      }
+
+      .title {
+        margin-top: 30px;
+        font-size: 24px;
+      }
+
+      .seat-row {
+        display: flex;
+        justify-content: center;
+        margin: 5px 0;
+      }
+
+      .seat {
+        width: 40px;
+        height: 40px;
+        margin: 0 2px;
+      }
+
+      .business {
+        background-color: #1fc075;
+      }
+
+      .economy {
+        background-color: #6bbb74;
+      }
+
+      .extra-legroom {
+        background-color: #82e0aa;
+      }
+
+      .preferred {
+        background-color: #f7dc6f;
+      }
+
+      .aisle {
+        width: 20px;
+      }
+
+      .galley {
+        font-size: 12px;
+        color: #777;
+        margin: 5px 0;
+      }
+    </style>
   </head>
   <body>
-    <div class="seating-chart">
-      <div class="row">
-        <div class="seat-group">
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-        </div>
-
-        <div class="seat-group turista-group">
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-        </div>
-        <div class="seat-group turista-group">
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-        </div>
-        <div class="seat-group turista-group">
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-        </div>
-        <div class="seat-group turista-group">
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-        </div>
-        <div class="seat-group turista-group">
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-          <div class="seat turista">B1</div>
-          <div class="seat turista">B2</div>
-        </div>
-
-        <!-- Puedes agregar más grupos de asientos turista de ser necesario -->
+    <div class="plane">
+      <div class="title">Cabina</div>
+      <div class="seat-row">
+        <div class="seat business"></div>
+        <div class="seat business"></div>
+        <div class="aisle"></div>
+        <div class="seat business"></div>
+        <div class="seat business"></div>
       </div>
-      <div class="seat-group turista-group">
-        <div class="seat turista">B1</div>
-        <div class="seat turista">B2</div>
-        <div class="seat turista">B1</div>
-        <div class="seat turista">B2</div>
-        <div class="seat turista">B1</div>
-        <div class="seat turista">B2</div>
+
+      <div class="seat-row">
+        <div class="seat economy"></div>
+        <div class="seat economy"></div>
+
+        <div class="aisle"></div>
+
+        <div class="seat economy"></div>
+        <div class="seat economy"></div>
       </div>
-    </div>
-    <div class="seat-group turista-group">
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-    </div>
-    <div class="seat-group turista-group">
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-    </div>
-    <div class="seat-group turista-group">
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-    </div>
-    <div class="seat-group turista-group">
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
-      <div class="seat turista">B1</div>
-      <div class="seat turista">B2</div>
+      <div class="seat-row">
+        <div class="seat economy"></div>
+        <div class="seat economy"></div>
+        <div class="aisle"></div>
+        <div class="seat economy"></div>
+        <div class="seat economy"></div>
+      </div>
+
+      <div class="seat-row">
+        <div class="seat economy"></div>
+        <div class="seat economy"></div>
+        <div class="aisle"></div>
+        <div class="seat economy"></div>
+        <div class="seat economy"></div>
+      </div>
+
+      <div class="seat-row">
+        <div class="seat extra-legroom"></div>
+        <div class="seat extra-legroom"></div>
+        <div class="aisle"></div>
+        <div class="seat extra-legroom"></div>
+        <div class="seat extra-legroom"></div>
+      </div>
+
+      <div class="seat-row">
+        <div class="seat extra-legroom"></div>
+        <div class="seat extra-legroom"></div>
+        <div class="aisle"></div>
+        <div class="seat extra-legroom"></div>
+        <div class="seat extra-legroom"></div>
+      </div>
+
+      <div class="seat-row">
+        <div class="seat preferred"></div>
+        <div class="seat preferred"></div>
+        <div class="aisle"></div>
+        <div class="seat preferred"></div>
+        <div class="seat preferred"></div>
+      </div>
+      <div class="seat-row">
+        <div class="seat preferred"></div>
+        <div class="seat preferred"></div>
+        <div class="aisle"></div>
+        <div class="seat preferred"></div>
+        <div class="seat preferred"></div>
+      </div>
     </div>
   </body>
 </html>
