--- a/web/TECAir_Reservations/src/app/components/search-plane/search-plane.component.html
+++ b/web/TECAir_Reservations/src/app/components/search-plane/search-plane.component.html
@@ -17,45 +17,45 @@
         <div class="col-lg-6 col-md-8 col-sm-10 mx-auto">
           <div class="d-flex justify-content-between flex-wrap">
             <!-- Origen Dropdown -->
-            <div class="dropdown mb-2 mb-lg-0">
-              <button
-                class="btn btn-secondary btn-sm dropdown-toggle"
-                type="button"
-                id="dropdownMenuButton1"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Salida
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <ul>
-                  <li><a class="dropdown-item" href="#">Normal</a></li>
-                  <li><a class="dropdown-item active" href="#">Active</a></li>
-                  <li><a class="dropdown-item disabled" href="#">perro</a></li>
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Vuelos
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Reservaciones</a></li>
+                  <li><a class="dropdown-item" href="#">check-in</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li><a class="dropdown-item" href="#">Promociones</a></li>
                 </ul>
-              </div>
-            </div>
+              </li>
+            </ul>
 
-            <div class="dropdown mb-2 mb-lg-0">
-              <button
-                class="btn btn-secondary btn-sm dropdown-toggle"
-                type="button"
-                id="dropdownMenuButton2"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Destino
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                <ul>
-                  <li><a class="dropdown-item" href="#">Normal</a></li>
-                  <li><a class="dropdown-item" href="#">Active</a></li>
-                  <li><a class="dropdown-item" href="#">perro</a></li>
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Vuelos
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Reservaciones</a></li>
+                  <li><a class="dropdown-item" href="#">check-in</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li><a class="dropdown-item" href="#">Promociones</a></li>
                 </ul>
-              </div>
-            </div>
+              </li>
+            </ul>
 
             <!-- Search Button -->
             <button class="btn btn-primary btn-sm">buscar</button>
