create:the checkout page for client

--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -8,4 +8,4 @@
 
 <app-slides></app-slides>
 <app-search-plane></app-search-plane>-->
-<app-place-airplane></app-place-airplane>
+<app-checkout></app-checkout>
