apdate:fix the bugs

--- a/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
+++ b/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
@@ -55,11 +55,11 @@
                         />
                         <i class="input-icon uil uil-lock-alt"></i>
                       </div>
-                      <a href="https://www.web-leb.com/code" class="btn mt-4"
+                      <a href="https://www.youtube.com/" class="btn mt-4"
                         >Login</a
                       >
                       <p class="mb-0 mt-4 text-center">
-                        <a href="https://www.web-leb.com/code" class="link"
+                        <a href="https://www.youtube.com/" class="link"
                           >Forgot your password?</a
                         >
                       </p>
@@ -102,7 +102,7 @@
                         />
                         <i class="input-icon uil uil-lock-alt"></i>
                       </div>
-                      <a href="https://www.web-leb.com/code" class="btn mt-4"
+                      <a href="https://www.youtube.com/" class="btn mt-4"
                         >Register</a
                       >
                     </div>
