--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -5,7 +5,10 @@
 <app-pricing></app-pricing>
 <app-place-airplane></app-place-airplane>
 <app-navbar></app-navbar>
+<app-search-plane></app-search-plane>
 
 <app-slides></app-slides>
-<app-search-plane></app-search-plane>-->
+<app-sign-in></app-sign-in>
+<app-checkout></app-checkout>-->
+
 <app-checkout></app-checkout>
