feat: add routing

--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div><i class="fa-solid fa-house"></i></div>
-<!--<app-sign-in></app-sign-in>
+<app-sign-in></app-sign-in>
 <app-slides></app-slides>
 <app-see-flights></app-see-flights>
-<app-pricing></app-pricing>-->
+<app-pricing></app-pricing>
 <app-navbar></app-navbar>
 <app-place-airplane></app-place-airplane>
