--- a/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
+++ b/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
@@ -11,7 +11,7 @@
       content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
     />
     <meta name="generator" content="Hugo 0.118.2" />
-    <title>Signin Template · Bootstrap v5.3</title>
+    <title>Sign In</title>
 
     <link
       rel="canonical"
@@ -58,39 +58,49 @@
       />
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-      <div class="form-floating">
-        <input
-          type="email"
-          class="form-control"
-          id="floatingInput"
-          placeholder="name@example.com"
-        />
-        <label for="floatingInput">Email address</label>
-      </div>
-      <div class="form-floating">
-        <input
-          type="password"
-          class="form-control"
-          id="floatingPassword"
-          placeholder="Password"
-        />
-        <label for="floatingPassword">Password</label>
-      </div>
+      <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+        <div class="form-floating">
+          <input
+            type="email"
+            class="form-control"
+            id="floatingInput"
+            placeholder="name@example.com"
+            formControlName="email"
+          />
+          <label for="floatingInput">Email address</label>
+        </div>
 
-      <div class="form-check text-start my-3">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          value="remember-me"
-          id="flexCheckDefault"
-        />
-        <label class="form-check-label" for="flexCheckDefault">
-          Remember me
-        </label>
-      </div>
-      <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+        <div class="form-floating">
+          <input
+            type="password"
+            class="form-control"
+            id="floatingPassword"
+            placeholder="Password"
+            formControlName="password"
+          />
+          <label for="floatingPassword">Password</label>
+        </div>
+
+        <div class="form-check text-start my-3">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            id="flexCheckDefault"
+            formControlName="rememberMe"
+          />
+          <label class="form-check-label" for="flexCheckDefault">
+            Remember me
+          </label>
+        </div>
+
+        <button class="btn btn-primary w-100 py-2" type="submit">
+          Sign in
+        </button>
+      </form>
+
       <p class="mt-5 mb-3 text-body-secondary">© 2017–2023</p>
     </main>
+
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
