--- a/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
+++ b/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
@@ -55,7 +55,7 @@
         aria-label="Offcanvas navbar large"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">TECAir</a>
+          <a class="navbar-brand" href="">TECAir</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -74,7 +74,7 @@
           >
             <div class="offcanvas-header">
               <h5 class="offcanvas-title" id="offcanvasNavbar2Label">
-                Informacion
+                Seleccione una opción
               </h5>
               <button
                 type="button"
@@ -86,35 +86,16 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Menu</a
-                  >
+                  <a class="nav-link" href="#">Ver Vuelos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About us</a>
+                  <a href="#" class="nav-link">Promociones</a>
                 </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    Vuelos
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Reservaciones</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">check-in</a>
-                    </li>
-                    <li>
-                      <hr class="dropdown-divider" />
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Promociones</a>
-                    </li>
-                  </ul>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Inicie sesión</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Regístrate</a>
                 </li>
               </ul>
             </div>
