--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -6,9 +6,9 @@
 <app-place-airplane></app-place-airplane>
 <app-navbar></app-navbar>
 <app-search-plane></app-search-plane>
-
+<app-buttons></app-buttons>
 <app-slides></app-slides>
 <app-sign-in></app-sign-in>
 <app-checkout></app-checkout>-->
 
-<app-buttons></app-buttons>
+<app-footer></app-footer>
