--- a/web/TECAir_Reservations/src/app/components/footer/footer.component.html
+++ b/web/TECAir_Reservations/src/app/components/footer/footer.component.html
@@ -3,20 +3,27 @@
     <div class="section">
       <h4>TECAir S.A</h4>
       <ul>
-        <li><a>Estudiantes</a></li>
-        <li><a href="#">Carlos Mata</a></li>
-        <li><a href="#">Felipe Vargas</a></li>
-        <li><a href="#">Ignacio Calderon</a></li>
-        <li><a href="#">Jose Umaña</a></li>
-        <li><a href="#">David Maldonado No sé jsjsjs</a></li>
+        <li>Estudiantes</li>
+        <li><a href="https://github.com/Carlos12001">Carlos Mata</a></li>
+        <li><a href="https://github.com/Felipe-V13">Felipe Vargas</a></li>
+        <li><a href="https://github.com/Apollo13-0">Ignacio Calderon</a></li>
+        <li><a href="https://github.com/jcur02">Jose Umaña</a></li>
+        <li>
+          <a href="https://github.com/diabloget">David Robles</a>
+        </li>
       </ul>
     </div>
     <div class="section">
       <h4>Proyecto 1</h4>
       <ul>
-        <li><a href="#">Bases de Datos</a></li>
-        <li><a href="#">Ing. Marco Rivera Meneses</a></li>
-        <li><a href="#">EScuela de Ing. en Computadores</a></li>
+        <li>Licenciatura Ingeniería en Computadores</li>
+        <li>CE3101 - Bases de Datos</li>
+        <li>
+          <a href="https://www.tec.ac.cr/marco-rivera-meneses"
+            >Ing. Marco Rivera Meneses</a
+          >
+        </li>
+        <li>Escuela de Ing. en Computadores</li>
       </ul>
     </div>
 
