--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -10,5 +10,5 @@
 <app-slides></app-slides>
 <app-sign-in></app-sign-in>
 <app-checkout></app-checkout>-->
-
+<app-search-plane></app-search-plane>
 <app-footer></app-footer>
