fix: delete main etiqueted

--- a/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
+++ b/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
@@ -49,7 +49,7 @@
       class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle"
     ></div>
 
-    <main>
+    <header>
       <nav
         class="navbar navbar-expand-lg navbar-dark bg-dark"
         aria-label="Offcanvas navbar large"
@@ -102,6 +102,6 @@
           </div>
         </div>
       </nav>
-    </main>
+    </header>
   </body>
 </html>
