--- a/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
+++ b/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
@@ -48,7 +48,7 @@
       </symbol>
     </svg>
 
-    <main class="form-signin w-100 m-auto">
+    <div class="form-signin w-100 m-auto">
       <img
         class="mb-4"
         src="/docs/5.3/assets/brand/bootstrap-logo.svg"
@@ -99,7 +99,7 @@
       </form>
 
       <p class="mt-5 mb-3 text-body-secondary">© 2017–2023</p>
-    </main>
+    </div>
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
