--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -1,8 +1,9 @@
 <div><i class="fa-solid fa-house"></i></div>
 <app-navbar></app-navbar>
 <app-slides></app-slides>
-
-<h2>DROPDOWN FLIES</h2>
 <app-buttons></app-buttons>
+
+<app-see-flights></app-see-flights>
+<app-search-plane></app-search-plane>
 <H2>FOOTER</H2>
 <app-footer></app-footer>
