--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -4,6 +4,6 @@
 
 <app-see-flights></app-see-flights>
 <app-sign-in></app-sign-in>
-<app-checkout></app-checkout>-->
+<app-checkout></app-checkout>
 <app-search-plane></app-search-plane>
 <app-footer></app-footer>
