feat: add models

--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -7,3 +7,4 @@
 <app-checkout></app-checkout>
 <app-search-plane></app-search-plane>
 <app-footer></app-footer>
+<app-place-airplane></app-place-airplane>
