--- a/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.css
+++ b/web/TECAir_Reservations/src/app/components/see-flights/see-flights.component.css
@@ -74,3 +74,14 @@
 .bd-mode-toggle .dropdown-menu .active .bi {
   display: block !important;
 }
+
+.card:hover,
+.card:focus {
+  transform: scale(1.03);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
