fix: comppenet correct

--- a/web/TECAir_Reservations/src/app/components/display-flies/display-flies.component.html
+++ b/web/TECAir_Reservations/src/app/components/display-flies/display-flies.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
 <app-search-plane></app-search-plane>
-<app-display-flies></app-display-flies>
+<app-see-flights></app-see-flights>
 <app-footer></app-footer>
