chore: cleaning things

--- a/web/TECAir_Reservations/src/app/components/footer/footer.component.html
+++ b/web/TECAir_Reservations/src/app/components/footer/footer.component.html
@@ -4,12 +4,28 @@
       <h4>TECAir S.A</h4>
       <ul>
         <li>Estudiantes</li>
-        <li><a href="https://github.com/Carlos12001">Carlos Mata</a></li>
-        <li><a href="https://github.com/Felipe-V13">Felipe Vargas</a></li>
-        <li><a href="https://github.com/Apollo13-0">Ignacio Calderon</a></li>
-        <li><a href="https://github.com/jcur02">Jose Umaña</a></li>
         <li>
-          <a href="https://github.com/diabloget">David Robles</a>
+          <a href="https://github.com/Carlos12001" target="_blank"
+            >Carlos Mata</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/Felipe-V13" target="_blank"
+            >Felipe Vargas</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/Apollo13-0" target="_blank"
+            >Ignacio Calderon</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/jcur02" target="_blank">Jose Umaña</a>
+        </li>
+        <li>
+          <a href="https://github.com/diabloget" target="_blank"
+            >David Robles</a
+          >
         </li>
       </ul>
     </div>
@@ -19,7 +35,7 @@
         <li>Licenciatura Ingeniería en Computadores</li>
         <li>CE3101 - Bases de Datos</li>
         <li>
-          <a href="https://www.tec.ac.cr/marco-rivera-meneses"
+          <a href="https://www.tec.ac.cr/marco-rivera-meneses" target="_blank"
             >Ing. Marco Rivera Meneses</a
           >
         </li>
@@ -29,8 +45,8 @@
 
     <div class="footer-bottom">
       <p>
-        TECAIRlines<br />
-        Copyright © 2023 Tec Air, Inc. Todos los derechos reservados
+        TECAIR Reservations<br />
+        Copyright © 2023 TECAir, Inc. Todos los derechos reservados
       </p>
       <p>Un miembro de Star Alliance</p>
     </div>
