feat:create the baggage module
Co-authored-by: Carlos12001 <Carlos12001@users.noreply.github.com>

--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -1,10 +1,1 @@
-<app-navbar></app-navbar>
-<app-slides></app-slides>
-<app-buttons></app-buttons>
-
-<app-see-flights></app-see-flights>
-<app-sign-in></app-sign-in>
-<app-checkout></app-checkout>
-<app-search-plane></app-search-plane>
-<app-footer></app-footer>
-<app-place-airplane></app-place-airplane>
+<app-baggage-create></app-baggage-create>
