--- a/web/TECAir_Reservations/src/app/components/checkout/checkout.component.html
+++ b/web/TECAir_Reservations/src/app/components/checkout/checkout.component.html
@@ -77,7 +77,7 @@
 
             <div class="col-12">
               <label for="email" class="form-label"
-                >Email
+                >email
                 <span class="text-body-secondary">(Optional)</span></label
               >
               <input
