--- a/web/TECAir_Reservations/src/app/components/pricing/pricing.component.html
+++ b/web/TECAir_Reservations/src/app/components/pricing/pricing.component.html
@@ -25,7 +25,7 @@
               <div class="plan-price">$10/mes</div>
               <div class="plan-feature">5 Usuarios</div>
               <div class="plan-feature">2GB de Almacenamiento</div>
-              <div class="plan-feature">Soporte Email</div>
+              <div class="plan-feature">Soporte email</div>
               <button class="btn btn-primary mt-3">Elegir Plan</button>
             </div>
           </div>
