--- a/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
+++ b/web/TECAir_Reservations/src/app/components/sign-in/sign-in.component.html
@@ -67,7 +67,7 @@
             placeholder="name@example.com"
             formControlName="email"
           />
-          <label for="floatingInput">Email address</label>
+          <label for="floatingInput">email address</label>
         </div>
 
         <div class="form-floating">
