--- a/web/TECAir_Reservations/src/app/components/baggage-create/baggage-create.component.html
+++ b/web/TECAir_Reservations/src/app/components/baggage-create/baggage-create.component.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="input-group">
-              <label class="input-group-text">Weight</label>
+              <label class="input-group-text">weight</label>
               <input
                 type="number"
                 formControlName="weight"
@@ -41,7 +41,7 @@
           </div>
           <div class="col-md-6">
             <div class="input-group">
-              <label class="input-group-text" for="priceInput">Price</label>
+              <label class="input-group-text" for="priceInput">price</label>
               <input
                 type="number"
                 id="priceInput"
