--- a/web/TECAir_Reservations/src/app/components/slides/slides.component.html
+++ b/web/TECAir_Reservations/src/app/components/slides/slides.component.html
@@ -37,8 +37,8 @@
       <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
-      <h3 class="h3-responsive">Panama City</h3>
-      <p>Panamá City es un destino turístico de Panamá</p>
+      <h3 class="h3-responsive">Panama city</h3>
+      <p>Panamá city es un destino turístico de Panamá</p>
     </div>
   </mdb-carousel-item>
 </mdb-carousel>
