--- a/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
+++ b/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
@@ -102,7 +102,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/display-sign-in"
+                  <a class="nav-link" routerLink="/display-resgiter"
                     >Regístrate</a
                   >
                 </li>
