feat: app conectting

--- a/web/TECAir_Reservations/src/app/components/home/home.component.html
+++ b/web/TECAir_Reservations/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
 <app-navbar></app-navbar>
-<app-register-user></app-register-user>
+<app-slides></app-slides>
+<app-search-plane></app-search-plane>
 <app-footer></app-footer>
