--- a/web/TECAir_Reservations/src/app/components/checkout/checkout.component.html
+++ b/web/TECAir_Reservations/src/app/components/checkout/checkout.component.html
@@ -1,1 +1,5 @@
-<button (click)="onConfirm()">Confirmar</button>
+<div class="button-container">
+  <button class="confirm-btn" (click)="onConfirm()">
+    Confirmar
+  </button>
+</div>
