--- a/web/TECAir_Reservations/src/styles.css
+++ b/web/TECAir_Reservations/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --text: #fdfcfc;
+  --background: #222222;
+  --primary: #01528f;
+  --secondary: #222222;
+  --accent: #404040;
+  --column1-bg: #343434;
+  --column2-bg: #2d2d2d;
+  --column3-bg: #272727;
+  --column4-bg: #212121;
+}
